examples/test/testpolicy11173.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy11173
  namespace: namespace426
spec:
  podSelector:
    matchLabels:
      key46: value26
      key32: value12
      key31: value46
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key17: value18
          key37: value42
          key31: value42
      podSelector:
        matchLabels:
          key16: value37
